tests/toylang/neg/001631_mutation.toylang
program a = { while a do sleep 0; } .
